# pyACVD

./: CMakeLists.txt  README.md  module.cpp  setup.py
ACVD/: CMakeLists.txt
pyacvd/: acvdqp.cpp  interface.h
